feat(kernel): D_norm completeness + conditions

--- a/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
+++ b/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
@@ -33,6 +33,14 @@
       "affected_ids": [],
       "because": [],
       "rule_id": "bridges/gating"
+    },
+    {
+      "affected_ids": [
+        "dn_efforts_1"
+      ],
+      "because": [],
+      "notes": "Checks required fields and provenance for D_norm statements.",
+      "rule_id": "dnorm/completeness"
     }
   ]
 }
