feat(kernel): ref resolution warnings

--- a/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
+++ b/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
@@ -55,6 +55,14 @@
       "because": [],
       "notes": "Detects obligation vs prohibition conflicts in overlapping scope.",
       "rule_id": "dnorm/conflicts"
+    },
+    {
+      "affected_ids": [
+        "dn_efforts_1"
+      ],
+      "because": [],
+      "notes": "Flags unresolved EntityRef/DefinitionRef usages.",
+      "rule_id": "refs/resolve"
     }
   ]
 }
