--- a/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
+++ b/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
@@ -8,6 +8,7 @@
   "reason_codes": [
     {
       "code": "SCOPE_TIME_MISSING",
+      "json_path": "/D_norm/statements/0/scope/time_about/kind",
       "message": "scope.time_about.kind='unspecified'",
       "object_id": "dn_efforts_1",
       "severity": "WARN"
