--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ OPENAI_API_KEY=
 ADEU_OPENAI_API=responses
 ADEU_OPENAI_MODEL=gpt-5.2
 ADEU_LOG_RAW_LLM=0
+ADEU_Z3_TIMEOUT_MS=3000
+ADEU_PERSIST_VALIDATOR_RUNS=0
