--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ ADEU_OPENAI_MODEL=gpt-5.2
 ADEU_LOG_RAW_LLM=0
 ADEU_Z3_TIMEOUT_MS=3000
 ADEU_PERSIST_VALIDATOR_RUNS=0
+ADEU_PROOF_BACKEND=mock
+ADEU_LEAN_BIN=lean
+ADEU_LEAN_TIMEOUT_MS=5000
