--- a/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
+++ b/examples/fixtures/reasonable_efforts_standard/expected/check/ir_reasonable_efforts_standard_v1.json
@@ -60,7 +60,9 @@
       "affected_ids": [
         "dn_efforts_1"
       ],
-      "because": [],
+      "because": [
+        "solver:SAT"
+      ],
       "notes": "Detects obligation vs prohibition conflicts in overlapping scope.",
       "rule_id": "dnorm/conflicts"
     },
