feat(explain): add deterministic diff report and /diff endpoint

--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "adeu-ir>=0.0.0",
   "adeu-kernel>=0.0.0",
   "adeu-puzzles>=0.0.0",
+  "adeu-explain>=0.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
