docs(lean): document obligations and add gated smoke test

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ ADEU_Z3_TIMEOUT_MS=3000
 ADEU_PERSIST_VALIDATOR_RUNS=0
 ADEU_PROOF_BACKEND=mock
 ADEU_LEAN_BIN=lean
+LEAN_BIN=
 ADEU_LEAN_TIMEOUT_MS=5000
