--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test:smoke": "node --test tests/routes.smoke.test.mjs"
   },
   "dependencies": {
     "next": "^16.1.6",
