--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 OPENAI_API_KEY=
 ADEU_OPENAI_API=responses
 ADEU_OPENAI_MODEL=gpt-5.2
+ADEU_OPENAI_HTTP_TIMEOUT_SECONDS=60.0
 ADEU_LOG_RAW_LLM=0
 ADEU_Z3_TIMEOUT_MS=3000
 ADEU_PERSIST_VALIDATOR_RUNS=0
