--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ OPENAI_API_KEY=
 ADEU_OPENAI_API=responses
 ADEU_OPENAI_MODEL=gpt-5.2
 ADEU_OPENAI_TEMPERATURE=0.3
+ADEU_OPENAI_DEFAULT_MAX_CANDIDATES=5
+ADEU_OPENAI_DEFAULT_MAX_REPAIRS=3
 ADEU_OPENAI_HTTP_TIMEOUT_SECONDS=60.0
 ADEU_LOG_RAW_LLM=0
 ADEU_Z3_TIMEOUT_MS=3000
