--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "adeu-concepts>=0.0.0",
   "adeu-puzzles>=0.0.0",
   "adeu-explain>=0.0.0",
+  "urm-runtime>=0.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
