--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "adeu-puzzles>=0.0.0",
   "adeu-explain>=0.0.0",
   "urm-runtime>=0.0.0",
+  "urm-domain-adeu>=0.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
