--- a/packages/urm_runtime/pyproject.toml
+++ b/packages/urm_runtime/pyproject.toml
@@ -10,6 +10,7 @@ readme = "../../README.md"
 requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.6,<3",
+  "jsonschema>=4.20,<5",
 ]
 
 [project.optional-dependencies]
