--- a/packages/adeu_concepts/pyproject.toml
+++ b/packages/adeu_concepts/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.6,<3",
   "adeu-ir>=0.0.0",
+  "adeu-patch-core>=0.0.0",
   "adeu-kernel>=0.0.0",
 ]
 
