--- a/packages/urm_runtime/pyproject.toml
+++ b/packages/urm_runtime/pyproject.toml
@@ -11,6 +11,8 @@ requires-python = ">=3.11"
 dependencies = [
   "pydantic>=2.6,<3",
   "jsonschema>=4.20,<5",
+  "adeu-ir>=0.0.0",
+  "adeu-kernel>=0.0.0",
 ]
 
 [project.scripts]
