urm: add policy validate CLI for instruction policy

--- a/packages/urm_runtime/pyproject.toml
+++ b/packages/urm_runtime/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
 
 [project.scripts]
 events = "urm_runtime.events_tools:main"
+policy = "urm_runtime.policy_tools:main"
 
 [project.optional-dependencies]
 dev = [
