--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "adeu-explain>=0.0.0",
   "urm-runtime>=0.0.0",
   "urm-domain-adeu>=0.0.0",
+  "urm-domain-paper>=0.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
