--- a/packages/urm_runtime/pyproject.toml
+++ b/packages/urm_runtime/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 [project.scripts]
 events = "urm_runtime.events_tools:main"
 policy = "urm_runtime.policy_tools:main"
+stop-gate = "urm_runtime.stop_gate_tools:main"
 
 [project.optional-dependencies]
 dev = [
