provider-parity: package matrix resource and add fallback loader

--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -28,3 +28,7 @@ explain-tools = "adeu_api.explain_tools:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/adeu_api"]
+include = ["src/adeu_api/provider_parity/*.json"]
+
+[tool.hatch.build.targets.sdist]
+include = ["src/adeu_api/provider_parity/*.json"]
