web: enforce evidence explorer template contract and add E1 tests

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
+    "test:contracts": "node --test tests/evidence-explorer-contract.test.ts",
     "test:smoke": "node --test tests/routes.smoke.test.mjs"
   },
   "dependencies": {
